# Scheme-Interpreter

./: .gitignore  CMakeLists.txt  README.md
docs/: Grammar.md  Implement.md  Intro.md  extension.md  guidance.md
more-tests/: 2.in  3.in  6.in  7.in
score/: diff_output.txt  scm.out  score.sh  sh.out  test  test.scm
score/data/: 100.in  101.in  102.in  102.out  103.in  104.in  105.in  106.in  107.in  108.in  109.in  11.in  110.in  111.in  111.out  112.in  112.out  114.in  114.out  117.in  118.out  119.in  120.in  121.in  122.in  123.in  13.in  15.in  18.in  20.in  21.in  24.in  25.in  27.in  29.in  31.in  32.in  33.in  34.in  35.in  (+70 more)
score/more-tests/: 1.in  4.in  5.in  7.in
src/: Def.cpp  Def.hpp  RE.cpp  RE.hpp  evaluation.cpp  expr.cpp  expr.hpp  main.cpp  parser.cpp  shared.hpp  syntax.cpp  syntax.hpp  value.cpp  value.hpp
